@@ -1,6 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.662 2006/07/19 23:43:25 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.663 2006/07/20 22:32:53 wolf31o2 Exp $
+
+  20 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  src/GLIInstallProfile.py:
+  Added a few more applications to the list of extra packages to be merged,
+  all from various GRP sets.
 
   19 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> bin/installer:
   Added launch variable to the end of each try-run with auth, which should
